S-52194: Moved access token validation message to MessageRes properties

--- a/src/main/resources/com/versionone/jenkins/MessagesRes.properties
+++ b/src/main/resources/com/versionone/jenkins/MessagesRes.properties
@@ -5,6 +5,7 @@ connectionFailedPath=Cannot connect to specified Server URL.
 connectionFailedUsername=Wrong username or password.
 connectionFailedRefField=There is no {0} field.
 connectionFailedProxyUrlMalformed=Proxy server URL is invalid.
+connectionFailedAccessToken=Could not authenticate. The access token may be incorrect or may have expired.
 
 cannotBeEmpty=This is mandatory field.
 pathWrong=Server URL is invalid.
